# tenant-exp

./: .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml  ruff.toml
app/: admin.py  urls.py  views.py
client_app/: admin.py  urls.py
project/: settings.py
